# 137-guide-3

./: .gitignore  CLAUDE.md  Course_Glossary.md  README.md  Reading_Summaries.md  grades.py  main.py  pyproject.toml
challenges/: EXAM_RECIPE.md  shuffle_exam.py
challenges/challenge_01/: bonus-question.md  challenge-01-vA-with-key.md  challenge-01-vA.md  challenge-01-vB-with-key.md  challenge-01-vB.md  challenge-01-vC-with-key.md  challenge-01-vC.md  challenge-01-vD-with-key.md  challenge-01-vD.md  (+2 more)
docs/: _mapping.md  _sidebar.md  glossary.md  index.html  index.md  instructor-notes.md  part-01.md  question-bank-with-answers.md  question-bank.md  timeline.md
optional-reading-summaries/: additional.md  week-00.md  week-01.md  week-02.md  week-03.md
papers/: Summary_Blakemore2001.md  Summary_Buckner2007.md  Summary_CarvalhoLampinen2025.md  Summary_Clark2013.md  Summary_Dennett1971.md  Summary_Fodor1992.md  Summary_Freeman2016.md  Summary_Heider1944.md  Summary_JaraEttinger2016.md  Summary_Johansson1973.md  Summary_Lockwood2020.md  Summary_Mitchell2006.md  Summary_Moran2014.md  Summary_MoskowitzChap1.md  Summary_MoskowitzChap2.md  Summary_MoskowitzIntro.md  Summary_Nagel1995.md  Summary_Parkinson2015.md  Summary_PenningtonHistory.md  Summary_Pitcher2021.md  Summary_Premack1978.md  Summary_Saxe2005.md  Summary_Sievers2013.md  Summary_Sievers2021.md  Summary_Skerry2014.md  Summary_Thornton2019.md  Summary_UlemanKressel2013.md  Summary_Vainio2025.md  Summary_Wang2025.md  Summary_Waytz2011.md  Summary_Waytzetal2010.md  Summary_Wheatley2023.md  Summary_Wheatleyetal2012.md
(+82 files in other folders)
