[project]
name = "challenge-guides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "marimo[recommended]>=0.17.0",
    "matplotlib>=3.10.7",
    "polars>=1.34.0",
    "ruff>=0.14.1",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "grades/visualizations",
]
